<resources>
    <string name="app_name">NasaApp</string>
    <string name="picture_of_the_day">Картинка дня</string>
    <string name="header_bottom_sheet_default">Название недоступно</string>
    <string name="desc_bottom_sheet_default">Описание недоступно</string>
    <string name="menu_appbar_title_favorite">favorite</string>
    <string name="menu_appbar_title_profile">profile</string>
    <string name="menu_navigation_title_favorite">Список избранных</string>
    <string name="menu_navigation_title_setting">Настройки</string>
    <string name="chip_day_before">позавчера</string>
    <string name="clip_yesterday">вчера</string>
    <string name="clip_today">сегодня</string>
    <string name="settings_fragment_subtitle_changed_theme">Выбор темы</string>
    <string name="settings_fragment_radio_btn_text_mars">Марсианская</string>
    <string name="settings_fragment_radio_btn_text_moon">Лунная</string>
    <string name="settings_fragment_radio_btn_text_default">Стандартная</string>
    <string name="settings_fragment_app_bar_btn_save_text">Готово</string>
    <string name="menu_appbar_title_search">search</string>

    <string name="tab_earth">Photo</string>
    <string name="tab_mars">Mars</string>
    <string name="chip_video">Видео</string>
    <string name="placeholder_for_search_layout">Введите запрос</string>
    <string name="btn_text_reload">Обновить</string>
    <string name="text_for_empty_list">Список избранного пустой</string>
    <string name="text_for_splash_screen">NASA</string>
</resources>