<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/main_fragment_search_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/btn_back_input_layout"
        android:layout_width="@dimen/value_btn"
        android:layout_height="@dimen/value_btn"
        android:layout_marginVertical="@dimen/margin_top_text_input_layout"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/text_input_layout_search"
        app:layout_constraintEnd_toStartOf="@id/text_input_layout_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_input_layout_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_search"
        style="@style/StyleSearchInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_top_text_input_layout"
        android:layout_marginEnd="@dimen/margin_top_text_input_layout"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back_input_layout"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_video"
            style="@style/MyChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_video" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_day_before"
            style="@style/MyChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_day_before" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_yesterday"
            style="@style/MyChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip_yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/MyChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/clip_today" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="@dimen/indicator_height" />

    <com.example.nasaapp.view.EquilateralImageView
        android:id="@+id/image_day"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:srcCompat="@drawable/placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>